--- a/BlackLabel.html
+++ b/BlackLabel.html
@@ -13,7 +13,7 @@
     <header class="header">
         <!--Inicio menu de inicio de sesión y registrarse atravez  de un icono-->
         <div class="menu conteiner">
-            <a href="#" class="logo"><span class="material-symbols-outlined">sell</span>BlackLabel</a>
+            <a href="BlackLabel.html" class="logo"><span class="material-symbols-outlined">sell</span>BlackLabel</a>
                 <input type="checkbox" id="menu">
                     <label for="menu">
                         <img src="#" class="menu-icono " alt="menu" >
@@ -30,7 +30,7 @@
         </div>
         <!--Inicio del header-->
         <div class="header-content conteiner">
-            <h1>Bienvenidos a BlackLabel</h1>
+            <h1>Bienvenido a BlackLabel</h1>
                 <p><i>
                     "Software es lo que Hacemos"
                 </i></p>
@@ -55,7 +55,7 @@
         
                                 <h3>Productos</h3>
                             <p>
-                                Agregar al carrito el producto que desea.
+                                Agregar el producto que desea al carrito.
                             </p>
                         </div>
                         <hr class="ln">
@@ -113,7 +113,7 @@
                 <div class="blog-1">
                     <img src="imagenes/verificacion.png" alt="" width="43" height="43">
 
-                        <h3>Beneficio3</h3>
+                        <h3>Beneficio 3</h3>
                     <p>
                         Facil manejo.
                     </p>
