--- a/BlackLabel/BlackLabel.html
+++ b/BlackLabel/BlackLabel.html
@@ -132,12 +132,13 @@
             <div class="footer-content conteiner">
                 <div class="link">
 
-                    <ul>
-                        <li><a href="#"><img src="imagenes/facebook.jpg" height="20px" width="20px"></a></li>
-                        <li><a href="#"><img src="imagenes/instagram.jpg" height="25px" width="25px"></a></li>
-                        <li><a href="#"><img src="imagenes/twitter.jpg" height="20px" width="20px"></a></li>
+                   <table colspan="3" rowspan="1" >
+                      
+                        <th><a href="#"><img src="imagenes/facebook.jpg" height="20px" width="20px"></a></th>
+                        <th><a href="#"><img src="imagenes/instagram.jpg" height="25px" width="25px"></a></th>
+                        <th><a href="#"><img src="imagenes/twitter.jpg" height="20px" width="20px"></a></th>
                         
-                    </ul>
+                    </table>
                 </div>
                 <div class="link">
 
