--- a/BlackLabel/BlackLabel.html
+++ b/BlackLabel/BlackLabel.html
@@ -132,13 +132,12 @@
             <div class="footer-content conteiner">
                 <div class="link">
 
-                   <table colspan="3" rowspan="1" >
-                      
-                        <th><a href="#"><img src="imagenes/facebook.jpg" height="20px" width="20px"></a></th>
-                        <th><a href="#"><img src="imagenes/instagram.jpg" height="25px" width="25px"></a></th>
-                        <th><a href="#"><img src="imagenes/twitter.jpg" height="20px" width="20px"></a></th>
+                    <ul>
+                        <li><a href="#"><img src="imagenes/facebook.jpg" height="20px" width="20px"></a></li>
+                        <li><a href="#"><img src="imagenes/instagram.jpg" height="25px" width="25px"></a></li>
+                        <li><a href="#"><img src="imagenes/twitter.jpg" height="20px" width="20px"></a></li>
                         
-                    </table>
+                    </ul>
                 </div>
                 <div class="link">
 
