--- a/BlackLabel/pagina_principal_productos.html
+++ b/BlackLabel/pagina_principal_productos.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
-<html>
-<header>
-
-</header>
+<html lang="en">
 <head>
-  
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <title>Pagina productos</title>
 </head>
 <body>
-  
-</body>
+    <header class="header" >
+        <!--Inicio menu de inicio de sesión y registrarse atravez  de un icono-->
+        <div class="menu conteiner" style="background-color: #000000;">
+            <a href="BlackLabel.html" class="logo"><span class="material-symbols-outlined">sell</span>BlackLabel</a>
+                <input type="checkbox" id="menu">
+                    <label for="menu">
+                        <img src="#" class="menu-icono " alt="menu" >
+                    </label>
+            <!--Inicio del navbar-->
+            <nav class="navbar">
+                 <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Categorias</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#"><span class="material-symbols-outlined">shopping_cart</span></a></li>
+                    <li><a href="#"><span class="material-symbols-outlined">account_circle</span></a></li>
+                 </ul>
+            </nav>
+        </div>
+</header>
 
+    
+</body>
 </html>
