--- a/BlackLabel/BlackLabel.html
+++ b/BlackLabel/BlackLabel.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <!--Inicio menu de inicio de sesión y registrarse atravez  de un icono-->
-        <div class="menu conteiner">
+        <div class="menu conteiner" background-image: url="imagenes/fondo_blacklabel.jpg";>
             <a href="BlackLabel.html" class="logo"><span class="material-symbols-outlined">sell</span>BlackLabel</a>
                 <input type="checkbox" id="menu">
                     <label for="menu">
@@ -21,7 +21,7 @@
             <!--Inicio del navbar-->
             <nav class="navbar">
                  <ul>
-                    <li><a href="#">Productos</a></li>
+                    <li><a href="pagina_principal_productos.html">Productos</a></li>
                     <li><a href="#"><span class="material-symbols-outlined">record_voice_over</span></a></li>
                     <li><a href="#"><span class="material-symbols-outlined">shopping_cart</span></a></li>
                     <li><a href="#"><span class="material-symbols-outlined">account_circle</span></a></li>
@@ -36,7 +36,7 @@
                 </i></p>
             <a href="#" class="btn-1">Sobre Nosotros</a>
         </div>
-        <img class="BlackLabel-img" src="https://images.moqups.com/repo/fj5rIZcx7czYB7642M7vC1leUm4fjXfn/p_AambDFrYsI5VN2m5wxrweL8jMMlEOlqr/w7Jq9t2eCp0U2vI6a8jsnTDtHuqSkULJ.png?Expires=1681232736&Key-Pair-Id=K1TPUF1X6HKIYU&Signature=ZrFp0JHfYDW9KAH9z1WMdjdCQ9P-SBxQArFGA-Cyh7CUOKOXSoionNzjR-UGKlXpj0SK4UTCGrRiV0Ic4A1TXsBvaMJViCxghitXT0HxaLl2-0RqcQ8tyT92~00TSMsSatC1Ht2atPcO3pURQpmE3K6YGfwEAS-11B85~smFOvqb4f14PBMiUn1umvLThj1bbq8GBnKDYgd~4x7A2GYATGLGue8oWVdobFRaXnMoOQA1hHTGRuGyuTgbxtOXdgc4BVDSjKNKBICi7VMQctnm5ovQGcjfiZSnuLtrmfvpH0pGQSN9kp1dhLUnWMslsRfunrh868cTpLxpnlgeliQh9Q__" alt=""   >
+        <img class="BlackLabel-img" src="imagenes/Fondo_rasgado.png">
     </header>
         <!--apartado de como funciona -->
         <section class="BlackLabel">
