--- a/BlackLabel/pagina_principal_productos.html
+++ b/BlackLabel/pagina_principal_productos.html
@@ -9,9 +9,9 @@
     <title>Pagina productos</title>
 </head>
 <body>
-    <header class="header" >
+    <header class="header">
         <!--Inicio menu de inicio de sesión y registrarse atravez  de un icono-->
-        <div class="menu conteiner" style="background-color: #000000;">
+        <div class="menu conteiner" style="background-color: #000000;"  width="200" height="200">
             <a href="BlackLabel.html" class="logo"><span class="material-symbols-outlined">sell</span>BlackLabel</a>
                 <input type="checkbox" id="menu">
                     <label for="menu">
