--- a/BlackLabel/BlackLabel.html
+++ b/BlackLabel/BlackLabel.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="headerindex">
         <!--Inicio menu de inicio de sesión y registrarse atravez  de un icono-->
-        <div class="menu conteiner" background-image: url="imagenes/fondo_blacklabel.jpg";>
+        <div class="menu conteiner" background-image:>
             <a href="BlackLabel.html" class="logo"><span class="material-symbols-outlined">sell</span>BlackLabel</a>
                 <input type="checkbox" id="menu">
                     <label for="menu">
@@ -132,12 +132,12 @@
             <div class="footer-content conteiner">
                 <div class="link">
 
-                    <ul>
-                        <li><a href="#"><img src="imagenes/facebook.jpg" height="20px" width="20px"></a></li>
-                        <li><a href="#"><img src="imagenes/instagram.jpg" height="25px" width="25px"></a></li>
-                        <li><a href="#"><img src="imagenes/twitter.jpg" height="20px" width="20px"></a></li>
+                    <table>
+                        <th><a href="#"><img src="imagenes/facebook.jpg" height="20px" width="20px"></a></th>
+                        <th><a href="#"><img src="imagenes/instagram.jpg" height="25px" width="25px"></a></th>
+                        <th><a href="#"><img src="imagenes/twitter.jpg" height="20px" width="20px"></a></th>
                         
-                    </ul>
+                    </table>
                 </div>
                 <div class="link">
 
