--- a/BlackLabel/pagina_principal_productos.html
+++ b/BlackLabel/pagina_principal_productos.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_slider.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Pagina productos</title>
 </head>
 <body>
-    <header class="header">
+    <header class="headerproductos">
         <!--Inicio menu de inicio de sesión y registrarse atravez  de un icono-->
-        <div class="menu conteiner" style="background-color: #000000;"  width="200" height="200">
+        <div class="menu conteiner" style="background-color: #000000;">
             <a href="BlackLabel.html" class="logo"><span class="material-symbols-outlined">sell</span>BlackLabel</a>
                 <input type="checkbox" id="menu">
                     <label for="menu">
@@ -25,10 +26,34 @@
                     <li><a href="#">Contacto</a></li>
                     <li><a href="#"><span class="material-symbols-outlined">shopping_cart</span></a></li>
                     <li><a href="#"><span class="material-symbols-outlined">account_circle</span></a></li>
-                 </ul>
+                </ul>
             </nav>
         </div>
 </header>
+<!--Inicio slider-->
+<section>
+    <div class="container-slider">
+        <div class="slider" id="slider">
+
+            <div class="slider__section">
+                <img src="imagenes/audifonos.jpg" alt="" class="slider__img">
+            </div>
+            <div class="slider__section">
+                <img src="imagenes/switch.jpg" alt="" class="slider__img">
+            </div>
+            <div class="slider__section">
+                <img src="imagenes/telefono.jpg" alt="" class="slider__img">
+            </div>
+            <div class="slider__section">
+                <img src="imagenes/productos_tecnologicos.jpg" alt="" class="slider__img">
+            </div>
+        </div>
+        <div class="slider__btn slider__btn--right" id="btn-right">&#62;</div>
+        <div class="slider__btn slider__btn--left" id="btn-left">&#60;</div>
+    </div>
+<script src="slider.js"></script>
+
+</section>
 
     
 </body>
