--- a/BlackLabel/pagina_principal_productos.html
+++ b/BlackLabel/pagina_principal_productos.html
@@ -29,7 +29,7 @@
                 </ul>
             </nav>
         </div>
-</header>
+    </header>
 <!--Inicio slider-->
 <section>
     <div class="container-slider">
@@ -52,9 +52,36 @@
         <div class="slider__btn slider__btn--left" id="btn-left">&#60;</div>
     </div>
 <script src="slider.js"></script>
-
 </section>
 
-    
+<!--Inicio catalogo de productos-->
+<div class="conte">
+    <div class="card">
+        <img src="imagenes/celular.jpg">
+        <h1>Celular</h1>
+        <p>Ultima tecnologia</p>
+        <h3>Cop 500.000</h3>
+    </div>
+
+
+
+    <div class="card">
+        <img src="imagenes/televisor.png">
+        <h1>Televisor</h1>
+        <p>Ultima tecnologia</p>
+        <h3>Cop 500.000</h3>
+    </div>
+
+
+
+    <div class="card">
+        <img src="imagenes/computaor.jpg">
+        <h1>Computador</h1>
+        <p>Ultima tecnologia</p>
+        <h3>Cop 500.000</h3>
+    </div>
+</div>
+
+
 </body>
 </html>
