--- a/BlackLabel/pagina_principal_productos.html
+++ b/BlackLabel/pagina_principal_productos.html
@@ -56,30 +56,35 @@
 
 <!--Inicio catalogo de productos-->
 <div class="conte">
-    <div class="card">
-        <img src="imagenes/celular.jpg">
-        <h1>Celular</h1>
-        <p>Ultima tecnologia</p>
-        <h3>Cop 500.000</h3>
-    </div>
+    <a href="#"> 
+        <div class="card">
+            <img src="imagenes/celular.jpg">
+            <h1>Celular</h1>
+            <p>Ultima tecnologia</p>
+            <h3>Cop 500.000</h3>
+    
+        </div>
+    </a>
 
 
+    <a href="#"> 
+        <div class="card">
+            <img src="imagenes/televisor.png">
+            <h1>Televisor</h1>
+            <p>Ultima tecnologia</p>
+            <h3>Cop 500.000</h3>
+        </div>
+    </a>
 
-    <div class="card">
-        <img src="imagenes/televisor.png">
-        <h1>Televisor</h1>
-        <p>Ultima tecnologia</p>
-        <h3>Cop 500.000</h3>
-    </div>
 
-
-
-    <div class="card">
-        <img src="imagenes/computaor.jpg">
-        <h1>Computador</h1>
-        <p>Ultima tecnologia</p>
-        <h3>Cop 500.000</h3>
-    </div>
+    <a href="#"> 
+        <div class="card">
+            <img src="imagenes/computaor.jpg">
+            <h1>Computador</h1>
+            <p>Ultima tecnologia</p>
+            <h3>Cop 500.000</h3>
+        </div>
+    </a>
 </div>
 
 
