--- a/BlackLabel(2)/pagina_principal_productos.html
+++ b/BlackLabel(2)/pagina_principal_productos.html
@@ -12,10 +12,10 @@
 <body>
     <header class="headerprod">
         <nav class="navprod">
-            <div class="logoprod"><span class="material-symbols-outlined">sell</span> BlackLabel</div> 
+            <a href="BlackLabel.html"><div class="logoprod"><span class="material-symbols-outlined">sell</span> BlackLabel</div></a>
             <ul class="menuprod">
-                <li><a href="#">Hogar</a></li><hr>
-                <li><a href="#">Categorias</a></li><hr>
+                <li><a href="BlackLabel.html">Hogar</a></li><hr>
+                <li><a href="categorias.html">Categorias</a></li><hr>
                 <li><a href="#">contacto</a></li>
                 
                 <li><a href="#"><span class="material-symbols-outlined">shopping_cart</span></a></li>
