--- a/BlackLabel(2)/categorias.html
+++ b/BlackLabel(2)/categorias.html
@@ -22,10 +22,11 @@
             </ul>
         </nav>
     </header>
-
-
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
+
+<h1>Titulo de la categoria</h1>
+<p>Descripción de la categoria</p>
 
     <footer class="footerproductos">
 
