--- a/BlackLabel(2)/categorias.html
+++ b/BlackLabel(2)/categorias.html
@@ -14,7 +14,14 @@
             <a href="BlackLabel.html"><div class="logoprod"><span class="material-symbols-outlined">sell</span> BlackLabel</div></a>
             <ul class="menuprod">
                 <li><a href="BlackLabel.html">Hogar</a></li><hr>
-                <li><a href="categorias.html">Categorias</a></li><hr>
+                <li><a href="categorias.html">Categorias</a></li>
+                <ul class="ul-second">
+
+                    <li class="categoria1">categoria1</li>
+                    <li class="categoria1">categoria2</li>
+                    <li class="categoria1">categoria2</li>
+
+                </ul><hr>
                 <li><a href="#">contacto</a></li>
                 
                 <li><a href="#"><span class="material-symbols-outlined">shopping_cart</span></a></li>
